--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ multidict==5.0.2
 networkx==2.5
 NudeNet==2.0.6
 numpy==1.18.5
+opencv-python==4.4.0.46
 opencv-python-headless==4.4.0.46
 opt-einsum==3.3.0
 Pillow==8.0.1
